--- a/app/templates/accounts.html
+++ b/app/templates/accounts.html
@@ -30,6 +30,7 @@
                 </fieldset>
             </form>
         </div>
+        <div class="column"><form action={{ "/accounts/" + asset.uuid() }}><input type="submit" value="Details" /></form></div>
     </div>
     {% endfor %}
 
@@ -55,6 +56,7 @@
                 </fieldset>
             </form>
         </div>
+        <div class="column"><form action={{ "/accounts/" + liability.uuid() }}><input type="submit" value="Details" /></form></div>
     </div>
     {% endfor %}
 </div>
