Add balance sheet to flask app

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,6 +12,7 @@
                 <h2>Menu</h2>
                 <ul>
                     <li><a href="/accounts">Accounts in Need of Update</a></li>
+                    <li><a href="/balance_sheet">Balance Sheet</a></li>
                 </ul>
             </div>
             <div class="column">
