Add skeleton for net worth vs time

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -13,6 +13,7 @@
                 <ul>
                     <li><a href="/accounts">Accounts in Need of Update</a></li>
                     <li><a href="/balance_sheet">Balance Sheet</a></li>
+                    <li><a href="/net_worth_vs_time">Net Worth vs. Time</a></li>
                 </ul>
             </div>
             <div class="column">
@@ -47,5 +48,7 @@
                 </form>
             </div>
         </div>
+    </div>
+  </div>
 </body>
 </html>
