--- a/app/templates/net_worth_vs_time.html
+++ b/app/templates/net_worth_vs_time.html
@@ -4,19 +4,35 @@
     <meta charset="UTF-8">
     <title>Net Worth vs. Time</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css">
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/taucharts@1/build/production/tauCharts.min.css">
+    <style>
+      .axis {
+        font: 14px sans-serif;
+      }
+      .line {
+        fill: none;
+        stroke: steelblue;
+        stroke-width: 2px;
+      }
+    </style>
 </head>
 <body>
-  <div class="container">
-    <h2>Net Worth vs. Time</h2>
-    <div id="net-worth-vs-time"></div>
-  </div>
-  <script
-  src="https://code.jquery.com/jquery-3.3.1.min.js"
-  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-  crossorigin="anonymous"></script>
-  <script src="//cdn.jsdelivr.net/d3js/3.5.17/d3.min.js" charset="utf-8"></script>
-  <script src="//cdn.jsdelivr.net/npm/taucharts@1/build/production/tauCharts.min.js" type="text/javascript"></script>
-  <script type="text/javascript" src="static/net_worth_vs_time.js"></script>
+    <div class="container">
+        <h2>Net Worth vs. Time</h2>
+        <form method="get">
+            <div class="row">
+                <div class="column">
+                    <span>Start Date: <input type="text" name="start"></span>
+                </div>
+                <div class="column">
+                    <span>End Date: <input type="text" name="end"></span>
+                </div>
+                <div class="column">
+                    <span><br /><input type="submit" value="Submit"></span>
+                </div>
+            </div>
+        </form>
+    </div>
+    <script src="https://d3js.org/d3.v4.min.js"></script>
+    <script type="text/javascript" src="static/net_worth_vs_time.js"></script>
 </body>
 </html>
