Add default start and end times

--- a/app/templates/net_worth_vs_time.html
+++ b/app/templates/net_worth_vs_time.html
@@ -13,13 +13,18 @@
         stroke: steelblue;
         stroke-width: 2px;
       }
+      .center {
+          margin: auto;
+          width: 50%;
+          padding: 5px;
+      }
     </style>
 </head>
 <body>
     <div class="container">
         <h2>Net Worth vs. Time</h2>
         <form method="get">
-            <div class="row">
+            <div class="row center">
                 <div class="column">
                     <span>Start Date: <input type="text" name="start"></span>
                 </div>
