Fix formatting of title on account page

--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>{{ account.institution }} | {{ account.name }}</title>
+    <title>{{ account.institution() }} | {{ account.name() }}</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/milligram/1.3.0/milligram.min.css">
 </head>
 <body>
